--- a/BACKEND/.env
+++ b/BACKEND/.env
@@ -1,6 +1,3 @@
 PORT=5000
-MONGODB_URI=mongodb://127.0.0.1/Poorvi
-JWT_SECRET=MyScretKey
-
-
-
+MONGODB_URI=mongodb+srv://poorvi:poorvi@cluster0.xervg47.mongodb.net/MakeMyTrip?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=MySecretKey
