--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node serve.js"
+    "start": "node index.js"
   },
   "author": "kshitij",
   "license": "ISC",
@@ -20,5 +20,8 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
