--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -4,9 +4,8 @@
   "description": "makemytripclone",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "build": "echo 'No build step defined'"
+    "start": "node api/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "kshitij",
   "license": "ISC",
@@ -17,12 +16,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.5.1"
+    "mongoose": "^8.4.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
-  },
-  "engines": {
-    "node": "20.x"
   }
 }
